--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -44,3 +44,8 @@
     margin-left: -7px !important;
     margin-top: -3px !important;
 }
+
+.select-container {
+    margin-left: auto;
+    margin-right: 1rem;
+}
