--- a/src/Palette.css
+++ b/src/Palette.css
@@ -6,3 +6,16 @@
 .Palette-colors{
     height: 90%;
 }
+.Palette-footer{
+    background: white;
+    height: 5vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: bold;
+    margin-right: 1rem;
+}
+.emoji {
+    font-size: 1.5rem;
+    margin-left: 1rem;
+}
