--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -7,13 +7,20 @@
     cursor: pointer;
     margin-bottom: -3.5px;
 }
+.SingleColorPalette .ColorBox{
+    height: 50%
+}
+
+.ColorBox.go-back {
+    background: black;
+}
 
 .ColorBox:hover .copy-button{
     opacity: 1;
     transition: .5s;
 }
 
-.copy-button{
+.copy-button, .back-button{
     width: 100px;
     height: 30px;
     position: absolute;
@@ -30,6 +37,9 @@
     color: white;
     text-transform: uppercase;
     border: none;
+    text-decoration: none;
+}
+.copy-button {
     opacity: 0;
 }
 .box-content{
