--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -54,6 +54,12 @@
     font-size: 12px;
     box-sizing: border-box;
 }
+.light-text{
+    color: white;
+}
+.ColorBox .dark-text{
+    color: rgb(0,0,0,0.5);
+}
 .see-more{
     background: rgba(255, 255, 255, 0.3);
     position: absolute;
