--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -6,8 +6,8 @@
     position: relative;
     cursor: pointer;
     margin-bottom: -3.5px;
-}
-.SingleColorPalette .ColorBox{
+} */
+/* .SingleColorPalette .ColorBox{
     height: 50%
 }
 
@@ -38,11 +38,11 @@
     text-transform: uppercase;
     border: none;
     text-decoration: none;
-}
-.copy-button {
+} */
+/* .copy-button {
     opacity: 0;
-}
-.box-content{
+} */
+/* .box-content{
     position: absolute;
     padding: 10px;
     width: 100%;
@@ -53,14 +53,14 @@
     text-transform: uppercase;
     font-size: 12px;
     box-sizing: border-box;
-}
-.light-text{
+} */
+/* .light-text{
     color: white;
-}
+} */
 .ColorBox .dark-text{
     color: rgb(0,0,0,0.5);
 }
-.see-more{
+/* .see-more{
     background: rgba(255, 255, 255, 0.3);
     position: absolute;
     border: none;
@@ -73,22 +73,22 @@
     line-height: 30px;
     text-transform: uppercase;
 }
-
-.copy-overlay {
+ */
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
     transition: transform 0.6s ease-in-out;
     transform: scale(0.1);
-}
-.copy-overlay.show {
+} */
+/* .copy-overlay.show {
     opacity: 1;
     transform: scale(50);
     z-index: 10;
     position: fixed;
-}
-.copy-msg {
+} */
+/* .copy-msg {
     position: fixed;
     top: 0;
     left: 0;
@@ -102,15 +102,15 @@
     opacity: 0;
     color: white;
     flex-direction: column;
-}
-.copy-msg.show {
+} */
+/* .copy-msg.show {
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all 0.4s ease-in-out;
     transition-delay: 0.3s;
-}
-.copy-msg h1 {
+} */
+/* .copy-msg h1 {
     font-weight: 400;
     text-shadow: 1px 2px black;
     background: rgba(255, 255, 255, 0.3);
@@ -119,8 +119,8 @@
     margin-bottom: 0;
     padding: 1rem;
     text-transform: uppercase;
-}
-.copy-message p {
+} */
+/* .copy-message p {
     font-size: 2rem;
     font-weight: 100;
-}
+} */
