--- a/src/Palette.css
+++ b/src/Palette.css
@@ -6,7 +6,7 @@
 /* .Palette-colors{
     height: 90%;
 } */
-.Palette-footer{
+/* .Palette-footer{
     background: white;
     height: 5vh;
     display: flex;
@@ -18,4 +18,4 @@
 .emoji {
     font-size: 1.5rem;
     margin-left: 1rem;
-}
+} */
